--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,33 +37,11 @@ cmake_minimum_required(VERSION 3.15)
 add_compile_definitions(__PX4_POSIX)
 add_compile_definitions(__PX4_LINUX)
 
-# this includes the generated topics directory
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-include_directories(${CMAKE_SOURCE_DIR})
-include_directories(${CMAKE_SOURCE_DIR}/../)
-include_directories(${CMAKE_SOURCE_DIR}/src/platforms)
-include_directories(${CMAKE_SOURCE_DIR}/src)
-include_directories(${CMAKE_SOURCE_DIR}/src/lib)
-include_directories(${CMAKE_SOURCE_DIR}/src/include)
-include_directories(${CMAKE_SOURCE_DIR}/src/drivers)
-include_directories(${CMAKE_SOURCE_DIR}/platforms/common/include)
-include_directories(${CMAKE_SOURCE_DIR}/platforms/common)
-include_directories(${CMAKE_SOURCE_DIR}/platforms/posix/include)
-include_directories(${CMAKE_SOURCE_DIR}/topic_header)
-
 file(GLOB UORB_SOURCE "${CMAKE_SOURCE_DIR}/*.[ch]pp" "${CMAKE_SOURCE_DIR}/*.[ch]")
 file(GLOB ULOG_SOURCE "${CMAKE_SOURCE_DIR}/src/platforms/ulog/src/*.[ch]")
 file(GLOB EXTRA_SOURCE
-        "${CMAKE_SOURCE_DIR}/src/drivers/*.cpp"
-        "${CMAKE_SOURCE_DIR}/src/lib/cdev/posix/*"
-        "${CMAKE_SOURCE_DIR}/src/lib/cdev/*.[ch]pp"
-        "${CMAKE_SOURCE_DIR}/platforms/posix/src/px4/common/px4_sem.cpp"
-        "${CMAKE_SOURCE_DIR}/platforms/posix/src/px4/common/px4_posix_tasks.cpp"
-        "${CMAKE_SOURCE_DIR}/src/platforms/*.c"
-        "${CMAKE_SOURCE_DIR}/platforms/common/work_queue/*.c"
+        "${CMAKE_SOURCE_DIR}/base/*.cpp"
         "${CMAKE_SOURCE_DIR}/topic_source/*.cpp"
-        "${CMAKE_SOURCE_DIR}/uORB_tests/*.cpp"
-        "${CMAKE_SOURCE_DIR}/src/lib/cdev/test/*.cpp"
         )
 add_executable(uorb ${UORB_SOURCE} ${ULOG_SOURCE} ${EXTRA_SOURCE} uorb_test.cpp )
 target_link_libraries(uorb pthread)
