Test messages and ulog moves to the test folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,10 @@ project(uORB)
 cmake_minimum_required(VERSION 3.15)
 
 file(GLOB UORB_SOURCE "${CMAKE_SOURCE_DIR}/*.cpp" "${CMAKE_SOURCE_DIR}/*.c")
-file(GLOB ULOG_SOURCE "${CMAKE_SOURCE_DIR}/base/ulog/src/*.c")
+file(GLOB ULOG_SOURCE "${CMAKE_SOURCE_DIR}/test/ulog/src/*.c")
 file(GLOB EXTRA_SOURCE
         "${CMAKE_SOURCE_DIR}/base/*.cpp"
-        "${CMAKE_SOURCE_DIR}/topic_source/*.cpp"
+        "${CMAKE_SOURCE_DIR}/test/topic_source/*.cpp"
         )
 add_executable(uorb ${UORB_SOURCE} ${ULOG_SOURCE} ${EXTRA_SOURCE} test/uorb_test.cpp)
 target_link_libraries(uorb pthread)
