Message subscriptions are implemented using C++ class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ aux_source_directory(${CMAKE_SOURCE_DIR}/sample SAMPLE_SOURCE)
 aux_source_directory(${CMAKE_SOURCE_DIR}/sample/topic_source SAMPLE_SOURCE)
 add_executable(uorb_sample ${SAMPLE_SOURCE})
 add_subdirectory(${CMAKE_SOURCE_DIR}/sample/msg)
+target_include_directories(uorb_sample PRIVATE ${CMAKE_SOURCE_DIR}/sample/msg)
 target_link_libraries(uorb_sample uorb_msgs)
 target_link_libraries(uorb_sample uorb)
 target_link_libraries(uorb_sample Threads::Threads)
