Build with examples as options

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/platforms/ulog"]
-	path = sample/ulog
+[submodule "examples/ulog"]
+	path = examples/ulog
 	url = https://github.com/ShawnFeng0/ulog.git
