--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,14 @@
 project(uorb)
 cmake_minimum_required(VERSION 3.15)
 
+if(CMAKE_TOOLCHAIN_FILE)
+    set(LIBRARY_OUTPUT_PATH_ROOT ${CMAKE_BINARY_DIR} CACHE PATH "root for library output, set this to change where android libs are compiled to")
+    # get absolute path, but get_filename_component ABSOLUTE only refer with source dir, so find_file here :(
+    get_filename_component(CMAKE_TOOLCHAIN_FILE_NAME ${CMAKE_TOOLCHAIN_FILE} NAME)
+    find_file(CMAKE_TOOLCHAIN_FILE ${CMAKE_TOOLCHAIN_FILE_NAME} PATHS ${CMAKE_SOURCE_DIR} NO_DEFAULT_PATH)
+    message(STATUS "CMAKE_TOOLCHAIN_FILE = ${CMAKE_TOOLCHAIN_FILE}")
+endif()
+
 set(UORB_BUILD_EXAMPLES "Build examples" ON)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
