--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,50 +1,24 @@
-############################################################################
-#
-#   Copyright (c) 2020 PX4 Development Team. All rights reserved.
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions
-# are met:
-#
-# 1. Redistributions of source code must retain the above copyright
-#    notice, this list of conditions and the following disclaimer.
-# 2. Redistributions in binary form must reproduce the above copyright
-#    notice, this list of conditions and the following disclaimer in
-#    the documentation and/or other materials provided with the
-#    distribution.
-# 3. Neither the name PX4 nor the names of its contributors may be
-#    used to endorse or promote products derived from this software
-#    without specific prior written permission.
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
-# FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
-# COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
-# INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
-# BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
-# OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
-# AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
-# LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
-# ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-# POSSIBILITY OF SUCH DAMAGE.
-#
-############################################################################
+find_package(GTest REQUIRED)
 
 # uorb test source
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} TEST_SOURCE)
-add_executable(uorb_test ${TEST_SOURCE})
-target_include_directories(uorb_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_executable(unit_tests ${TEST_SOURCE})
+target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+gtest_add_tests(TARGET unit_tests)
+
+# gtest
+target_link_libraries(unit_tests GTest::GTest GTest::Main)
+include_directories(${PROJECT_SOURCE_DIR}/src ${GTEST_INCLUDE_DIRS})
 
 # uorb
-target_link_libraries(uorb_test uorb)
-target_include_directories(uorb_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../..)
+target_link_libraries(unit_tests uorb)
+target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../..)
 
 # orb message meta data
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/msg)
-target_link_libraries(uorb_test uorb_msgs)
-target_include_directories(uorb_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/msg)
+target_link_libraries(unit_tests uorb_msgs)
+target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/msg)
 
 # pthread
 find_package(Threads REQUIRED)
-target_link_libraries(uorb_test Threads::Threads)
+target_link_libraries(unit_tests Threads::Threads)
