--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,24 +30,26 @@
 # POSSIBILITY OF SUCH DAMAGE.
 #
 ############################################################################
-
 project(uorb)
+
 cmake_minimum_required(VERSION 3.15)
 
-option(UORB_BUILD_EXAMPLES "Build examples" ON)
+option(UORB_BUILD_EXAMPLES "Build examples" OFF)
+option(UORB_BUILD_TESTS "Build tests" OFF)
 
-if(CMAKE_TOOLCHAIN_FILE)
+if (CMAKE_TOOLCHAIN_FILE)
     set(LIBRARY_OUTPUT_PATH_ROOT ${CMAKE_BINARY_DIR} CACHE PATH "root for library output, set this to change where android libs are compiled to")
     # get absolute path, but get_filename_component ABSOLUTE only refer with source dir, so find_file here :(
     get_filename_component(CMAKE_TOOLCHAIN_FILE_NAME ${CMAKE_TOOLCHAIN_FILE} NAME)
     find_file(CMAKE_TOOLCHAIN_FILE ${CMAKE_TOOLCHAIN_FILE_NAME} PATHS ${CMAKE_SOURCE_DIR} NO_DEFAULT_PATH)
     message(STATUS "CMAKE_TOOLCHAIN_FILE = ${CMAKE_TOOLCHAIN_FILE}")
-endif()
+endif ()
 
-if(NOT DEFINED CMAKE_INSTALL_PREFIX)
-    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Installation Directory")
-    message(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
-endif()
+# https://cmake.org/cmake/help/latest/variable/CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT.html
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Installation Directory" FORCE)
+endif ()
+message(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -56,12 +58,20 @@ aux_source_directory(${CMAKE_SOURCE_DIR}/uorb UORB_SOURCE)
 aux_source_directory(${CMAKE_SOURCE_DIR}/uorb/base UORB_SOURCE)
 add_library(uorb ${UORB_SOURCE})
 
-set_property(TARGET uorb PROPERTY PUBLIC_HEADER uorb/uorb.h)
+# install uorb
 install(TARGETS uorb
-        ARCHIVE DESTINATION lib
-        PUBLIC_HEADER DESTINATION include/uorb)
+        ARCHIVE DESTINATION lib)
+
+file(GLOB UORB_HEADERS uorb/*.h)
+install(FILES ${UORB_HEADERS} DESTINATION include/uorb)
+
+file(GLOB UORB_BASE_HEADERS uorb/base/*.h)
+install(FILES ${UORB_BASE_HEADERS} DESTINATION include/uorb/base)
 
 if (UORB_BUILD_EXAMPLES)
-#    add_subdirectory(examples)
+    add_subdirectory(examples)
+endif ()
+
+if (UORB_BUILD_TESTS)
     add_subdirectory(test)
 endif ()
