Keep the independence of the message generator, do not compile in the msg directory

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,19 +3,19 @@ project(uorb_examples)
 cmake_minimum_required(VERSION 3.15)
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SAMPLE_SOURCE)
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/topic_source SAMPLE_SOURCE)
-add_executable(uorb_sample ${SAMPLE_SOURCE})
-target_include_directories(uorb_sample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/msg/uorb/topics_sources SAMPLE_SOURCE)
+add_executable(uorb_example_pub_sub ${SAMPLE_SOURCE})
+target_include_directories(uorb_example_pub_sub PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Generate orb message
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/msg)
+add_dependencies(uorb_example_pub_sub uorb_examples_target_msg_headers uorb_examples_target_msg_sources)
+target_include_directories(uorb_example_pub_sub PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/msg)
 
 # uorb library
-target_link_libraries(uorb_sample uorb)
-target_include_directories(uorb_sample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
-
-# orb message meta data
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/msg)
-target_link_libraries(uorb_sample uorb_msgs)
-target_include_directories(uorb_sample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/msg)
+target_link_libraries(uorb_example_pub_sub uorb)
+target_include_directories(uorb_example_pub_sub PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 # pthread
 find_package(Threads REQUIRED)
-target_link_libraries(uorb_sample Threads::Threads)
+target_link_libraries(uorb_example_pub_sub Threads::Threads)
