Generate uorb_topic.h to msg/topics directory

--- a/examples/msg/CMakeLists.txt
+++ b/examples/msg/CMakeLists.txt
@@ -68,6 +68,7 @@ add_custom_command(OUTPUT ${uorb_headers}
         DEPENDS
         ${msg_files}
         ${tools_root}/templates/uorb/msg.h.em
+        ${tools_root}/templates/uorb/uorb_topics.h.em
         ${tools_root}/tools/px_generate_uorb_topic_files.py
         COMMENT "Generating uORB topic headers"
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
