The C interface uses the internal version of the subscription

--- a/uorb/git_version.cc.in
+++ b/uorb/git_version.cc.in
@@ -4,6 +4,4 @@
 
 #include "uorb/uorb.h"
 
-const char *orb_version() {
-  return "@UORB_GIT_TAG@";
-}
+const char *orb_version() { return "@UORB_GIT_TAG@"; }
